--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ href="https://freecatphotoapp.com/">
 </a>
  in our gallery.
  </p>
- <img src="../photos/relaxing-cat.jpg">
+ <img src="./photos/relaxing-cat.jpg">
  <h2>
    Cat lists
  </h2>
